--- a/source/styles/styles.css
+++ b/source/styles/styles.css
@@ -33,15 +33,14 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 16px;
   background-color: #C9F1FF72;
 }
 
 .bubble {
   position: relative;
   width: 420px;
-  font-size: 33px;
-  line-height: 43px;
+  font-size: 30px;
+  line-height: 40px;
   border-radius: 33px;
   padding: 24px;
   text-align: center;
@@ -69,6 +68,54 @@ body {
   min-width: 353px;
 }
 
-.reload{
-  background-color: chartreuse;
+.buttons {
+  margin: 33px 0;
+}
+
+.primary, .secondary {
+  text-align: center;
+  cursor: pointer;
+  font-size:24px;
+  padding: 10px 30px;  
+  outline: none;
+  border: none;
+  border-radius:13px;
+  box-shadow: 0 9px #95a5a6;
+}
+
+.primary {
+  background-color: #0177e7;
+}
+
+.secondary{
+  background-color: #118bfe;
+}
+
+.primary:active {
+  background-color: #2ecc71;
+  box-shadow: 0 5px #95a5a6;
+  transform: translateY(4px);
+}
+
+.primary:hover {
+  background-color: #0177e7;
+}
+
+
+.secondary:hover{
+  background-color: #118bfe;
+}
+
+.secondary:active {
+  background-color: #2ecc71;
+  box-shadow: 0 5px #95a5a6;
+  transform: translateY(4px);
+}
+
+.frame {
+  padding: 30px;
+  background-color: #118BFE;
+  margin-bottom: 33px;
+  border: 2px solid #FB98FE;
+  border-radius: 33px;
 }
